login page changes implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,5 @@
 <button mat-raised-button color="primary" (click)="submit()">Submit</button>
 <span *ngIf="show"> <button mat-button color="accent">Login success !!</button></span>
 </form> -->
-<app-login></app-login>
+<app-header></app-header>
+<router-outlet></router-outlet>
