--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,46 +2,31 @@
   <div class="flex-container">
     <div class="flex-item-left mat-elevation-z3">
       <div class="login-image-container">
-
         <img alt="Company Name Logo" src="../../../assets/shopping.png" class="login-image-size" />
-
       </div>
-
     </div>
     <div class="flex-item-right">
       <div class="main-div">
         <mat-card class="mat-elevation-z3">
           <mat-card-content>
-
             <mat-toolbar class="toolbar">
-  
               <span>Log In </span>
-  
             </mat-toolbar>
-            <form class="login-form" [formGroup]="createLoginForm" (ngSubmit)="onSubmit()">
-  
+            <form class="login-form" [formGroup]="createLoginForm" (ngSubmit)="onSubmit()" novalidate>
               <mat-form-field appearance="outline">
-  
                 <mat-label>User Name</mat-label>
-  
-                <input type="text" matInput formControlName="userName">
-  
-                <!-- <mat-error
-                  *ngIf="createLoginForm.get('userName')?.invalid">{{this.getFormErrorMessage('userName')}}
-                </mat-error> -->
+                <input type="text" matInput formControlName="email">
+                 <mat-error
+                 *ngIf="createLoginForm.get('email')?.invalid"><mat-icon>error</mat-icon>{{this.getFormErrorMessage('email')}}
+                </mat-error> 
   
               </mat-form-field>
               <mat-form-field appearance="outline">
-  
                 <mat-label>Password</mat-label>
-  
                 <input type="password" matInput formControlName="password">
-  
-                <!-- <mat-error
-  
-                    *ngIf="createLoginForm.get('password')?.invalid">{{this.getFormErrorMessage('password')}}
-                  </mat-error> -->
-  
+                 @if(createLoginForm.get('email')?.invalid){
+                  <mat-error><mat-icon>error</mat-icon>{{this.getFormErrorMessage('password')}}</mat-error>
+                }  
               </mat-form-field>
               <button type="submit" color="primary" mat-raised-button [disabled]="!createLoginForm.valid" class="subBtn">
   
