--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -9,7 +9,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary" (click)="viewDetails(product)">View Details</button>
+      <button mat-button color="primary" (click)="viewDetails(product.id)">View Details</button>
       <button mat-button color="accent" >Add to Cart</button>
     </mat-card-actions>
 </mat-card>
