--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -72,3 +72,28 @@
 
   </div>
 </div>
+<!-- <div class="wrapper">
+  <div class="flex-container mat-elevation-z4">
+    <div class="flex-item-right">
+      <div class="loginImg">
+        <img alt="Company Name Logo" src="../../../assets/logo" class="login-image-size" />
+      </div>
+        <mat-card class="main-div">
+          <mat-card-content>
+            <span>
+              New User Registration
+            </span>
+          </mat-card-content>
+          <div class="registration-form">
+            <form class="registratiom-form" [formGroup]="createRegistrationForm">
+              <mat-form-field appearance="outline">
+                <mat-label>Email Id:</mat-label>
+                <input type="email" matInput formControlName="userName">
+              </mat-form-field>
+            </form>
+          </div>
+        </mat-card>
+      
+    </div>
+  </div>
+</div> -->
