--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,8 +15,13 @@
   .header-buttons {
     display: flex;
     gap: 20px;
+    justify-content: center;
+    align-items: center;
 
     button {
         width:100px;
+    }
+    p{
+      font-size: x-small;
     }
   }
