--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,10 +2,10 @@
 <mat-card>
     <img mat-card-image  src="{{product.image}}" alt="Product Image" class="product-image">
     <mat-card-content>
-      <h3 mat-card-title>{{product?.name}}</h3>
-      <p mat-card-subtitle>{{product?.price}}</p>
+      <h3 mat-card-title>{{product.title}}</h3>
+      <p mat-card-subtitle>{{product.price}}</p>
       <p mat-card-text class="product-description">
-        {{product?.description}}
+        {{product.description}}
       </p>
     </mat-card-content>
     <mat-card-actions>
