--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,12 +12,15 @@
     @if(!isLoggedIn()){
     <button mat-raised-button color="accent" (click)="register()">Register</button>
     }
-    <mat-icon>add_shopping_cart</mat-icon>
+    <button mat-icon-button (click)="openCart()">
+      <mat-icon>add_shopping_cart</mat-icon>
+      <span  class="cart-item-count">{{ this.cartItems.cartItems().length }}</span>
+    </button>
     @if(isLoggedIn()){
       <p>welcome    {{appwide.getUsername()}}</p>
       <!-- Add more buttons as needed -->
-      }
-    
+    }
+    <button mat-raised-button color="accent" [routerLink]="['/counter']">Counter</button>
   </div>
 </mat-toolbar>
 
