--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,9 +1,5 @@
-<h1>Hello</h1>
 
-
-<!-- 
-
-<div *ngIf="cartItems.length > 0; else emptyCart">
+<!-- <div *ngIf="cartItems.length > 0; else emptyCart">
   <div class="row">
     <div class="col-md-4" *ngFor="let item of cartItems">
       <mat-card>
@@ -17,3 +13,17 @@
     </div>
   </div>
 </div> -->
+<h2>Cart cartItems</h2>
+<div>
+  @if (cartData.cartItems){
+    @for(item of cartData.cartItems; track cartData.cartItems.id){
+      
+      <p>{{item.title}}</p>
+    }
+  }
+</div>
+<div >
+  @if(cartData.length==0){
+    <h2>Cart is menpty</h2>
+  }
+</div>
