--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="productDetails" >
+<div class="card2" *ngIf="productDetails"  >
     <mat-card class="example-card" appearance="outlined">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
